# routes/movieRoutes.js
@@ -7,8 +7,21 @@ const {
     updateMovie,
     deleteMovie,
 } = require("../controllers/movieController");
+const {
+    getReviewsForMovie,
+    getReviewById,
+    createReview,
+    updateReview,
+    deleteReview,
+} = require("../controllers/reviewController");
 
 const router = express.Router();
+
+router.get("/:movieId/reviews", getReviewsForMovie);
+router.post("/:movieId/reviews", createReview);
+router.get("/:movieId/reviews/:id", getReviewById);
+router.put("/:movieId/reviews/:id", updateReview);
+router.delete("/:movieId/reviews/:id", deleteReview);
 
 router.get("/", getMovies);
 router.get("/:id", getMovieById);
